TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "129308506107152" [label="Start"];
  "129308506107152" -> "129308506106624";
  "129308506106624" [label="Code"];
  "129308506106624" -> "129308506105568";
  "129308506106624" -> "129308506097936";
  "129308506106624" -> "129308506110464";
  "129308506105568" [label="#include"];
  "129308506097936" [label="<stdio.h>"];
  "129308506110464" [label="Function"];
  "129308506110464" -> "129308506109792";
  "129308506110464" -> "129308506100240";
  "129308506110464" -> "129308506095728";
  "129308506109792" [label="main"];
  "129308506100240" [label="Parameters"];
  "129308506095728" [label="Code"];
  "129308506095728" -> "129308506102400";
  "129308506095728" -> "129308506101920";
  "129308506095728" -> "129308506098464";
  "129308506095728" -> "129308506107200";
  "129308506095728" -> "129308506096736";
  "129308506102400" [label="Declaration"];
  "129308506102400" -> "129308506099280";
  "129308506102400" -> "129308506109216";
  "129308506099280" [label="a"];
  "129308506109216" [label="5"];
  "129308506101920" [label="Declaration"];
  "129308506101920" -> "129308506107728";
  "129308506101920" -> "129308506109648";
  "129308506107728" [label="b"];
  "129308506109648" [label="Expr"];
  "129308506109648" -> "129308506101680";
  "129308506109648" -> "129308506109504";
  "129308506101680" [label="&"];
  "129308506109504" [label="a"];
  "129308506098464" [label="Declaration"];
  "129308506098464" -> "129308506104704";
  "129308506098464" -> "129308506096064";
  "129308506104704" [label="c"];
  "129308506096064" [label="Expr"];
  "129308506096064" -> "129308506110704";
  "129308506096064" -> "129308506097552";
  "129308506110704" [label="&"];
  "129308506097552" [label="b"];
  "129308506107200" [label="Assignment"];
  "129308506107200" -> "129308506100096";
  "129308506107200" -> "129308506099760";
  "129308506100096" [label="c"];
  "129308506099760" [label="0"];
  "129308506096736" [label="Return"];
  "129308506096736" -> "129308506106000";
  "129308506096736" -> "129308506100768";
  "129308506106000" [label="return"];
  "129308506100768" [label="0"];
}
